# python_boilerplate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.rst  dockerfile  example.env  local.env.example  main.py  pyproject.toml  requirements_dev.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: ci.yaml  dependabot.yml
.github/workflows/: ci.yaml
boilerplate/: __init__.py
docs/: conf.py  index.rst
script/: devops.sh
tests/: test_main.py
