[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude = [".venv/*.*"]
exclude_dirs = [".venv"]
tests = ["B108", "B306", "B307", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B325", "B602", "B604"]

[tool.rstcheck]
report_level = "WARNING"
